--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Qwomenz Consult | Data, Services & Result Checkers</title>
+  <title>Qhowmenz Consult | Data, Services & Result Checkers</title>
   <meta name="description" content="Buy MTN, AirtelTigo, and Telecel data. Netflix shared accounts, Audiomack Premium, MTN AFA registration, BECE & WASSCE result checkers.">
   <link rel="icon" href="assets/favicon.png">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header class="container site-header">
-  <div class="brand">Qwomenz Consult</div>
+  <div class="brand">Qhowmenz Consult</div>
   <nav>
     <a href="#buy-data">Buy Data</a>
     <a href="#services">More Services</a>
@@ -141,7 +141,7 @@
 <footer class="site-footer">
   <div class="container">
     <p>WhatsApp: <a href="https://wa.me/233592848359" target="_blank" rel="noopener">0592848359</a></p>
-    <p>Manual MoMo for now • Qwomenz Consult • © 2025</p>
+    <p>Manual MoMo for now • Qhowmenz Consult • © 2025</p>
   </div>
 </footer>
 
