--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       </label>
       <div class="price-row">GHS <span id="mtn-price">—</span></div>
       <button class="btn btn--mtn" onclick="openWhatsApp('MTN','mtn')">Buy Now</button>
+      <button class="btn btn--sms" onclick="openSMS()">SMS Order</button>
     </div>
 
     <div class="card">
@@ -52,6 +53,7 @@
       </label>
       <div class="price-row">GHS <span id="at-price">—</span></div>
       <button class="btn btn--tigo" onclick="openWhatsApp('AirtelTigo','at')">Buy Now</button>
+      <button class="btn btn--sms" onclick="openSMS()">SMS Order</button>
     </div>
 
     <div class="card">
@@ -64,6 +66,7 @@
       </label>
       <div class="price-row">GHS <span id="telecel-price">—</span></div>
       <button class="btn btn--telecel" onclick="openWhatsApp('Telecel','telecel')">Buy Now</button>
+      <button class="btn btn--sms" onclick="openSMS()">SMS Order</button>
     </div>
   </section>
 
@@ -81,6 +84,7 @@
       </label>
       <div class="price-row">GHS <span id="netflix-price">45</span></div>
       <button class="btn btn--netflix" onclick="openService('Netflix', 'netflix-plan')">Buy Now</button>
+      <button class="btn btn--sms" onclick="openSMS()">SMS Order</button>
     </div>
 
     <div class="card">
@@ -94,6 +98,7 @@
       </label>
       <div class="price-row">GHS <span id="audio-price">20</span></div>
       <button class="btn btn--audiomack" onclick="openService('Audiomack', 'audio-plan')">Buy Now</button>
+      <button class="btn btn--sms" onclick="openSMS()">SMS Order</button>
     </div>
 
     <div class="card">
@@ -119,6 +124,7 @@
       </label>
       <div class="price-row">GHS <span id="bece-price">28</span></div>
       <button class="btn btn--wa" onclick="openChecker('BECE','bece-qty')">Buy Now</button>
+      <button class="btn btn--sms" onclick="openSMS()">SMS Order</button>
     </div>
 
     <div class="card">
@@ -134,6 +140,7 @@
       </label>
       <div class="price-row">GHS <span id="wassce-price">35</span></div>
       <button class="btn btn--wa" onclick="openChecker('WASSCE','wassce-qty')">Buy Now</button>
+      <button class="btn btn--sms" onclick="openSMS()">SMS Order</button>
     </div>
   </section>
 </main>
